test_logs/middleware_test_run_2.txt

> nggk-tau-ini-apa@1.0.0 test
> cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --passWithNoTests --testPathPattern=unit/middleware.test.js --no-cache

node.exe : [baseline-b
rowser-mapping] The 
data in this module 
is over two months 
old.  To ensure 
accurate Baseline 
data, please update: 
`npm i baseline-browse
r-mapping@latest -D`
At line:1 char:1
+ & "D:\ENV\NodeJS/nod
e.exe" "C:\Users\Renz\
AppData\Roaming\npm/no
de_mo ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: ([baseline-   
 brows...ping@late    
st -D`:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
  console.log
    [dotenv@17.2.3] injecting env (9) from .env -- tip: 🔐 encrypt with Dotenvx: https://dotenvx.com

      at _log (node_modules/dotenv/lib/main.js:142:11)

(node:13728) 
ExperimentalWarning: 
VM Modules is an 
experimental feature 
and might change at 
any time
(Use `node 
--trace-warnings ...` 
to show where the 
warning was created)
FAIL __tests__/unit/mi
ddleware.test.js
  Middleware Unit 
Tests
    Auth Middleware
      √ should return 
401 if no auth header 
(3 ms)
      √ should return 
401 if invalid header 
format (1 ms)
      × should return 
401 if token invalid
      × should call 
next and set user if 
token valid
    Role Middleware
      requireRole
        √ should 
return 403 if no user
        √ should 
allow admin to access 
any role
        √ should 
allow correct role
        √ should 
return 403 for 
incorrect role
        √ should 
allow Koordinator to 
access Dosen routes 
(1 ms)
        √ should 
allow Kaprodi to 
access Dosen routes
        √ should 
allow Kaprodi to 
access Koordinator 
routes
      kaprodiOnly
        √ should 
return 403 if no user
        √ should 
allow kaprodi
        √ should 
block admin
        √ should 
block other roles
    Upload Middleware
      parseMultipart
        √ should skip 
if req.file already 
exists
        √ should skip 
if content-type is 
not multipart

  ● Middleware Unit 
Tests › Auth 
Middleware › should 
return 401 if token 
invalid

    TypeError: jwt.ver
ify.mockImplementation
 is not a function

    [0m [90m 55 
|[39m             
[36mconst[39m res 
[33m=[39m mockRespon
se()[33m;[39m
     [90m 56 |[39m
    [31m[1m>[22m[3
9m[90m 57 |[39m     
        jwt[33m.[39m
verify[33m.[39mmockI
mplementation(() 
[33m=>[39m { 
[36mthrow[39m 
[36mnew[39m [33mErr
or[39m([32m'Invalid'
[39m)[33m;[39m 
})[33m;[39m
     [90m    |[39m  
                      
[31m[1m^[22m[39m
     [90m 58 |[39m
     [90m 59 |[39m  
           
auth(req[33m,[39m 
res[33m,[39m 
mockNext)[33m;[39m
     [90m 60 |[39m  
           expect(res
[33m.[39mstatus)[33m
.[39mtoHaveBeenCalled
With([35m401[39m)[3
3m;[39m[0m

      at 
Object.<anonymous> (__
tests__/unit/middlewar
e.test.js:57:24)

  ● Middleware Unit 
Tests › Auth 
Middleware › should 
call next and set 
user if token valid

    TypeError: jwt.ver
ify.mockReturnValue 
is not a function

    [0m [90m 66 
|[39m             
[36mconst[39m 
mockUser [33m=[39m 
{ id[33m:[39m [35m1
[39m[33m,[39m 
role[33m:[39m 
[32m'admin'[39m 
}[33m;[39m
     [90m 67 |[39m
    [31m[1m>[22m[3
9m[90m 68 |[39m     
        jwt[33m.[39m
verify[33m.[39mmockR
eturnValue(mockUser)[
33m;[39m
     [90m    |[39m  
                      
[31m[1m^[22m[39m
     [90m 69 |[39m
     [90m 70 |[39m  
           
auth(req[33m,[39m 
res[33m,[39m 
mockNext)[33m;[39m
     [90m 71 
|[39m[0m

      at 
Object.<anonymous> (__
tests__/unit/middlewar
e.test.js:68:24)

----------------------------|---------|----------|---------|---------|-------------------
File                        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------------------------|---------|----------|---------|---------|-------------------
All files                   |    2.52 |     4.96 |    4.25 |    2.59 |                   
 controllers                |       0 |        0 |       0 |       0 |                   
  adminController.js        |       0 |        0 |       0 |       0 | 3-285             
  authController.js         |       0 |        0 |       0 |       0 | 6-278             
  bimbinganController.js    |       0 |        0 |       0 |       0 | 3-170             
  dosenController.js        |       0 |        0 |       0 |       0 | 4-156             
  jadwalController.js       |       0 |        0 |       0 |       0 | 3-197             
  kaprodiController.js      |       0 |        0 |       0 |       0 | 4-376             
  kelompokController.js     |       0 |        0 |       0 |       0 | 3-209             
  koordinatorController.js  |       0 |        0 |       0 |       0 | 5-192             
  mahasiswaController.js    |       0 |        0 |       0 |       0 | 4-391             
  notificationController.js |       0 |        0 |       0 |       0 | 3-72              
  sharedController.js       |       0 |        0 |       0 |       0 | 8-253             
  sidangController.js       |       0 |        0 |       0 |       0 | 3-336             
 middleware                 |   55.73 |    83.33 |      50 |   55.73 |                   
  auth.js                   |   58.33 |    66.66 |     100 |   58.33 | 17-22             
  role.js                   |     100 |      100 |     100 |     100 |                   
  upload.js                 |   24.13 |       50 |   14.28 |   24.13 | 25-67             
 routes                     |       0 |        0 |       0 |       0 |                   
  adminRoutes.js            |       0 |      100 |     100 |       0 | 6-28              
  authRoutes.js             |       0 |      100 |     100 |       0 | 5-21              
  bimbinganRoutes.js        |       0 |        0 |       0 |       0 | 8-40              
  dosenRoutes.js            |       0 |      100 |     100 |       0 | 8-32              
  kaprodiRoutes.js          |       0 |      100 |     100 |       0 | 6-27              
  koordinatorRoutes.js      |       0 |      100 |     100 |       0 | 8-40              
  mahasiswaRoutes.js        |       0 |      100 |     100 |       0 | 9-42              
  notificationRoutes.js     |       0 |      100 |     100 |       0 | 5-8               
  pengujiRoutes.js          |       0 |        0 |       0 |       0 | 6-45              
  profileRoutes.js          |       0 |        0 |       0 |       0 | 7-63              
  proposalRoutes.js         |       0 |        0 |       0 |       0 | 8-58              
  reportRoutes.js           |       0 |        0 |       0 |       0 | 8-51              
  sidangRoutes.js           |       0 |      100 |       0 |       0 | 8-30              
 utils                      |       0 |        0 |       0 |       0 |                   
  constants.js              |       0 |        0 |       0 |       0 | 6-71              
  gcs.js                    |       0 |        0 |       0 |       0 | 3-42              
  gdrive.js                 |       0 |        0 |       0 |       0 | 12-191            
  httpResponses.js          |       0 |        0 |       0 |       0 | 6-54              
  jwt.js                    |       0 |        0 |       0 |       0 | 4-7               
  password.js               |       0 |      100 |       0 |       0 | 4-9               
  roleHelper.js             |       0 |        0 |       0 |       0 | 13-157            
----------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 
failed, 1 total
Tests:       2 
failed, 15 passed, 17 
total
Snapshots:   0 total
Time:        3.28 s
Ran all test suites 
matching /unit\\middle
ware.test.js/i.
